--- a/denote-explore.org
+++ b/denote-explore.org
@@ -1,42 +1,43 @@
-#+title: Denote Explore: Explore your Denote digital garden
-
+#+title: Denote Explorer: Explore your Denote digital garden
 #+TEXINFO_DIR_CATEGORY: Emacs
 #+TEXINFO_DIR_NAME: Denote Explorer
-#+TEXINFO_DIR_DESC: Explore your Denote digital garden
+#+TEXINFO_DIR_DESC: Explore and visualise Denote files
 
 The Denote package by Protesilaos (Prot) Stavrou provides extensive functionality for creating, retrieving, managing, and linking files in plain text, Markdown, and Org Mode. The most redeeming qualities of this package are its filename convention and modular simplicity. Due to its reliance on file names, you can also use the package to access other file types, such as PDFs or multimedia files (which we call Denote attachments). In this way, Denote becomes a fully-featured personal knowledge management system. 
 
-The Denote-Explore package came into existence as my collection of Denote files grew. I created some auxiliary functions to manage and explore my burgeoning Denote files. This package provides four types of commands:
+The Denote-Explorer package came into existence as my collection of Denote files grew. I created some auxiliary functions to manage and explore my burgeoning Denote files. This package provides four types of commands:
 
-1. Summary statistics: Count notes, attachments and keywords.
+1. Descriptive statistics: Count notes, attachments and keywords.
 2. Random walks: Generate new ideas using serendipity.
 3. Janitor: Maintain your denote collection.
-4. Visualisations: Visualise your Denote files as bar charts or a network.
+4. Knowledge Graphs: Visualise and analyse your Denote files as a network.
 
-* Summary Statistics
-The Denote-Explore package distinguishes between Denote files (notes) and attachments. Denote files are either Org Mode, Markdown, or Plain Text. All other files, such as photographs, PDFs, media files, LaTeX, and HTML, are attachments.
+* Descriptive Statistics
+The Denote-Explorer package distinguishes between Denote files (notes) and attachments. Denote files are either Org Mode, Markdown, or Plain Text. All other files, such as photographs, PDFs, media files, LaTeX, and HTML, are attachments.
 
 After a day of working hard on your digital knowledge garden, you can count the notes and attachments in your collection. Two functions provide some basic statistics of your Denote files:
 
 1. ~denote-explore-count-notes~: Count the number of notes and attachments. 
 2. ~denote-explore-count-keywords~: Count the number of distinct Denote keywords. 
 
-These functions are informative, but a graph says more than a thousand numbers. The built-in =chart.el= package by Eric M. Ludlam is a quaint tool for creating bar charts in a plain text buffer. Two commands are available in Denote-Explore to visualise basic statistics: 
+These functions are informative, but a graph says more than a thousand numbers. The built-in =chart.el= package by Eric M. Ludlam is a quaint tool for creating bar charts in a plain text buffer. Two commands are available in Denote-Explorer to visualise basic statistics: 
 
-1. ~denote-explore-barchart-keywords~: Visualise the top n keywords.
-2. ~denote-explore-barchart-filetypes~: Visualise used file extensions.
+1. ~denote-explore-barchart-filetypes~: Visualise used file extensions.
+2. ~denote-explore-barchart-keywords~: Visualise the top n keywords.
+
+Prefixing the universal argument =C-u= renders bar charts only for attachments.
 
 * Random Walks
 Creativity springs from a medley of experiences, emotions, subconscious musings, and connecting random ideas. Introducing random elements into the creative process generates avenues of thought you might not have travelled otherwise. Random walks through your notes can be beneficial when you're stuck in a rut or just like to walk through your files randomly.
 
-A random walk is an arbitrary sequence of events without a defined relationship between the steps. You take a random walk by jumping to a random note, connected or unconnected to the current buffer.
+A random walk is an arbitrary sequence without a defined relationship between the steps. You take a random walk by jumping to a random note, connected or unconnected to the current buffer.
 
-The Denote-Explore package provides three commands to inject some randomness into your explorations:
+The Denote-Explorer package provides three commands to inject some randomness into your explorations:
 
-1. ~denote-explore-random-note~: Jump to a random note or attachment.
+1. ~denote-explore-random-note~: Jump to a random Denote file.
 2. ~denote-explore-random-link~: Jump to a random linked note (either forward or backward) or attachments (forward only).
-3. ~denote-explore-random-keyword~: Jump to a random note or attachment with the same selected keyword(s). 
-4. ~denote-explore-random-regex~: Jump to a random note or attachment that matches a regular expression.
+3. ~denote-explore-random-keyword~: Jump to a random Denote file with the same selected keyword(s). 
+4. ~denote-explore-random-regex~: Jump to a random Denote file that matches a regular expression.
 
 The default state is that these functions jump to any Denote text file (plain text, Markdown or Org-mode). Prefixing the universal argument (=C-u=) includes attachments in the sample for a random jump.
 
@@ -44,12 +45,12 @@ Jumping to a randomly linked file naturally only works when the current buffer i
 
 When jumping to a random file with one or more matching keywords, you can choose one or more keywords from the current buffer, or override the completion options with free text. The asterisk symbol =*= selects all keywords in the completion list. This section process is skipped when the current buffer only has one keyword. When the current buffer is not a Denote file, you can choose any available keyword(s) in your Denote collection. 
 
-Jumping to a random note and matching multiple keywords only works when the ~denote-sort-keywords~ is enabled or when the selected keywords are in the same order as the target file. You can alphabetise keywords in your Denote files with ~denote-explore-sort-keywords~.
+Jumping to a random note and matching multiple keywords only works when ~denote-sort-keywords~ is enabled, or when the selected keywords are in the same order as in the target file. You can alphabetise keywords in your Denote files with ~denote-explore-sort-keywords~, explained in the next section.
 
 Jumping to a note that matches a regular expression lets you find random notes matching a search string. For example, to find a note you wrote in May 2022, use =^202205= and using =202305.*_journal= jumps to a random journal entry in May 2023.
 
-* Denote-Explore Janitor
-After hoarding Denote files for a while, you may need a janitor to organise your collection. A janitor ensures cleanliness, orderliness, and sanitation in a building, so this role is also perfect for managing to your Denote files. The Denote-Explore package provides a series of commands to assist with cleaning, organising, and sanitising your files.
+* Janitor
+After hoarding Denote files for a while, you may need a janitor to organise your collection. A janitor ensures cleanliness, orderliness, and sanitation in a building, so this role is also perfect for managing to your Denote files. The Denote-Explorer package provides a series of commands to assist with cleaning, organising, and sanitising your files.
 
 ** Duplicate notes
 The Denote identifier is a unique string constructed of the note's creation date and time in ISO 8601 format (e.g., =2024035T203312=). Denote either uses the current date and time when generating a new note or the date and time the file was created on the file system. The Denote package prevents duplicate identifiers when creating a new note.
@@ -73,37 +74,37 @@ The ~denote-explore-single-keywords~ command provides a list of file tags that a
 
 You can also find notes or attachments without keywords with the ~denote-explore-zero-keywords~ command. This command lists all notes and attachments without keywords in the minibuffer, so you can open them and consider adding keywords or leaving them as is.
 
-You can rename or remove keywords with ~denote-explore-rename-keyword~. Select one or more existing keywords from the completion list and enter the new name of the keyword(s). This function renames all chosen keywords to their latest version or removes the original keyword from all existing notes when you enter an empty string as the new keyword. This function cycles through all notes and attachments containing one or more selected keywords and asks for confirmation before making any changes. The new keyword list is stored alphabetically, and the front matter is synchronised with the file name.
-
 Ordering keywords alphabetically makes searching for files more predictable. If you rename files manually, the keywords might sometimes be in different order. The ~denote-explore-sort-keywords~ function checks all notes. It notifies the user if there are any notes where keywords are not alphabetised. The function warns the user before renaming any files. Denote sorts keywords alphabetically for new notes when the ~denote-sort-keywords~ variable is enabled. 
+
+You can rename or remove keywords with ~denote-explore-rename-keyword~. Select one or more existing keywords from the completion list and enter the new name of the keyword(s). This function renames all chosen keywords to their latest version or removes the original keyword from all existing notes when you enter an empty string as the new keyword. This function cycles through all notes and attachments containing one or more selected keywords and asks for confirmation before making any changes. The new keyword list is stored alphabetically, and the front matter is synchronised with the file name.
 
 ** Synchronising Meta Data
 Denote stores the metadata for each note in the filename using its ingenious format. Some of this metadata is copied to the front matter of a note, which can lead to discrepancies between the two metadata sources.
 
 The ~denote-explore-sync-metadata~ function checks all notes and asks the user to rename any file where these two data sets are mismatched. The front matter data is the source of truth. This function also enforces the alphabetisation of keywords, which assists with finding notes.
 
-* Personal Knowledge Graphs
+* Knowledge Graphs
 Denote implements a linking mechanism that connects notes (either Org, Markdown, or plain text files) to other notes or attachments. This mechanism allows the user to visualise all notes as a network.
 
 Emacs is a text processor with limited graphical capabilities. However, committing your ideas to text requires a linear way of thinking since you can only process one word at a time. Visual thinking through tools such as mind maps or network diagrams is another way to approach your ideas. One of the most common methods to visualise interlinked documents is in a network or a personal knowledge graph.
 
 Network visualisation in Denote is not just a feature but a powerful tool that visualises how notes are linked, helping you discover previously unseen connections between your thoughts and enhancing your creative process.
 
-It's important to note that Denote-Explore does not offer live previews of your note collection. This deliberate choice is to prevent the 'dopamine traps' of seeing your thoughts develop in real-time. Instead, Denote-Explore provides a focused tool for the surgical analysis of your notes, while  the main user interface remains text-based.
+It's important to note that Denote-Explorer does not offer live previews of your note collection. This deliberate choice is to prevent the 'dopamine traps' of seeing your thoughts develop in real-time. Instead, Denote-Explorer provides a focused tool for the surgical analysis of your notes, while  the main user interface remains text-based.
 
-A network diagram has nodes (vertices) and edges. Each node represents a file in your Denote system, and each edge represents a link between notes. Denote-Explore provides three types of network diagrams to explore the relationships between your thoughts. The package exports and displays these in one of three formats, with HTML / D3.js files as the default.
+A network diagram has nodes (vertices) and edges. Each node represents a note or an attachment, and each edge represents a link between these. Denote-Explorer provides three types of network diagrams to explore the relationships between your thoughts. The package exports and displays these in one of three formats, with HTML / D3.js files as the default.
 
 The diagram below shows the basic principle of a knowledge graph. In the actual output, nodes are circles.
 
 #+begin_export ascii
-┌────────┐      ┌────────┐
-│        │ edge │        │
-│  node  ├─────►│  node  │
-│        │      │        │
-└────────┘      └────────┘
+┌──────────────┐        ┌──────────────┐
+│     node     │  edge  │     node     │
+│    (note)    ├───────►│    (note)    │
+│ (attachment) │ (link) │ (attachment) │
+└──────────────┘        └──────────────┘
 #+end_export
 
-You create a network with the ~denote-explore-network~ command. This command will ask the user to select the type of network to create. Each network type requires additional inputs to analyse to a defined part of your Denote files. You can visualise all your notes, but if your collection because large it is not an informative exercise.
+You create a network with the ~denote-explore-network~ command. This command will ask the user to select the type of network to create. Each network type requires additional inputs to analyse to a defined part of your Denote files. You can visualise all your notes, but if your collection is large it is not an informative exercise and will take a while to render.
 
 ** Community of Notes
 A community consists of notes that share (part of) an ID, name, signature or keyword. The software asks to enter a search term or regular expression. For example, all notes with Emacs as their keyword (=_emacs=), or all notes with a certain signature, e.g. ~==01=a=99~.  A community graph displays all notes matching a regular expression and their connections. The example below indicates the community that contains the =_emacs= regular expression, within the dashed line. The algorithm prunes any links to non-matching notes, which in the example below is the note with the =_vim= keyword.
@@ -195,7 +196,7 @@ Some keywords might have to be excluded from this graph because they skew the re
 ** Network Layout and Presentation
 Emacs cannot independently generate graphics and thus relies on external software. This package can use three external mechanisms to create graphs (configurable with ~denote-explore-network-format~), set to D3.js / JSON output by default. Other available formats are GraphViz SVG and GEXF.
 
-The Denote-Explore network algorithm consists of four steps:
+The Denote-Explorer network algorithm consists of four steps:
 
 1. The ~denote-explore-network~ function determined the relevant functions based on user input.
 2. The code generates a nested association list for the selected graph:
@@ -206,7 +207,7 @@ The Denote-Explore network algorithm consists of four steps:
 4. Relevant external software displays the result (in most cases a web browser).
 
 ** D3.js
-[[https://d3js.org/][D3.js]] is a JavaScript library for visualising data. This method provides an aesthetically pleasing and interactive view of your notes. The Denote-Explore package stores the desired network as a JSON file. This JSON file is merged with a HTML / JavaScript template to visualise the network. Emacs invokes your default browser to view the network.
+[[https://d3js.org/][D3.js]] is a JavaScript library for visualising data. This method provides an aesthetically pleasing and interactive view of your notes. The Denote-Explorer package stores the desired network as a JSON file. This JSON file is merged with a HTML / JavaScript template to visualise the network. Emacs invokes your default browser to view the network.
 
 Hover over any node to reveal its name and relevant metadata. Clicking on any node in a community or neighbourhood graph opens the relevant file in the browser, or whatever application the browser associates with the relevant file type.
 
@@ -222,9 +223,9 @@ There are a few configurations you might consider for this visualisation format:
 - ~denote-explore-network-d3-colours~: Colour palette for the nodes. You can choose between any of the available categorical colour schemes in the D3 package. 
 
 ** GraphViz
-[[https://graphviz.org/][GraphViz]] is an open-source graph visualisation software toolkit, ideal for this task. The Denote-Explore software saves the graph in the DOT language as a =.gv= file. The GraphViz software converts the DOT code to an =SVG= file.
+[[https://graphviz.org/][GraphViz]] is an open-source graph visualisation software toolkit, ideal for this task. The Denote-Explorer software saves the graph in the DOT language as a =.gv= file. The GraphViz software converts the DOT code to an =SVG= file.
 
-You will need to install GraphViz to enable this functionality. Denote-Explore will raise an error when trying to create a GraphViz graph without the required external software available.
+You will need to install GraphViz to enable this functionality. Denote-Explorer will raise an error when trying to create a GraphViz graph without the required external software available.
 
 Hover over any node to reveal its name and relevant metadata. Clicking on any node in a community or neighbourhood graph opens the relevant file in the browser, or whatever application the browser associates with the relevant file type.
 
